--- a/atividades/atividade-06/README.me
+++ b/atividades/atividade-06/README.me
@@ -1,1 +1,8 @@
+Ativividade-05
+Ricardo Duarte Taveira
 
+Executar o passo para implementar a arquitetura proposta no artigo anexo. Evidenciar a realização da tarefa com prints.
+
+https://renatogroffe.medium.com/postgresql-pgadmin-4-docker-compose-montando-rapidamente-um-ambiente-para-uso-55a2ab230b89
+
+Observação: Fazer em duplas. Registrar no GitHub e Google Classroom.
