--- a/atividades/atividade-06/README.me
+++ b/atividades/atividade-06/README.me
@@ -1,4 +1,4 @@
-Ativividade-05
+Atividade 06
 Ricardo Duarte Taveira
 
 Executar o passo para implementar a arquitetura proposta no artigo anexo. Evidenciar a realização da tarefa com prints.
